# ChangeLog for sys-fs/zfs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/zfs/ChangeLog,v 1.39 2012/07/21 18:55:54 ryao Exp $

*zfs-0.6.0_rc9-r6 (21 Jul 2012)

  21 Jul 2012; Richard Yao <ryao@gentoo.org>
  +files/zfs-0.6.0_rc9-hardened-3.3-and-later-support.patch,
  +zfs-0.6.0_rc9-r6.ebuild, -zfs-0.6.0_rc9-r5.ebuild, zfs-9999.ebuild:
  Fix NULL pointer dereference on >=sys-kernel/hardened-sources-3.3.0

  11 Jul 2012; Richard Yao <ryao@gentoo.org>
  +files/zfs-0.6.0_rc9-bsd-init.patch:
  Fix files/zfs-0.6.0_rc9-bsd-init.patch

  11 Jul 2012; Richard Yao <ryao@gentoo.org> files/zfs-0.6.0_rc9-bsd-init.patch:
  Fix CVS keyword substitution in patch file

*zfs-0.6.0_rc9-r5 (11 Jul 2012)

  11 Jul 2012; Richard Yao <ryao@gentoo.org>
  +files/zfs-0.6.0_rc9-bsd-init.patch,
  +files/zfs-0.6.0_rc9-linux-3.5-support.patch, +zfs-0.6.0_rc9-r5.ebuild,
  -files/zfs-0.6.0_rc9-range-lock-caller-allocate.patch,
  -files/zfs-0.6.0_rc9-use-pushpage.patch, -zfs-0.6.0_rc9-r3.ebuild,
  -zfs-0.6.0_rc9-r4.ebuild, -zfs-0.6.0_rc9.ebuild, zfs-9999.ebuild:
  Linux 3.5 support, Change LICENSE variable and remove patch that had been
  mistakenly reintroduced in -r4 and caused regressions

*zfs-0.6.0_rc9-r4 (10 Jul 2012)

  10 Jul 2012; Richard Yao <ryao@gentoo.org>
  +files/zfs-0.6.0_rc9-fix-32-bit-warnings.patch, +zfs-0.6.0_rc9-r4.ebuild:
  Fix 32-bit compiler warnings and remove push page patch in favor of change to
  sys-fs/spl

  01 Jul 2012; Richard Yao <ryao@gentoo.org> zfs-0.6.0_rc9-r3.ebuild,
  zfs-0.6.0_rc9.ebuild, zfs-9999.ebuild:
  Add MIT to LICENSE because of USE=bash-completion

  01 Jul 2012; Richard Yao <ryao@gentoo.org> +files/bash-completion,
  zfs-0.6.0_rc9-r3.ebuild, zfs-0.6.0_rc9.ebuild, zfs-9999.ebuild:
  Import bash-completion from zfs-fuse

  25 Jun 2012; Richard Yao <ryao@gentoo.org> zfs-0.6.0_rc9-r3.ebuild,
  zfs-9999.ebuild:
  Add config checks for initramfs support

*zfs-0.6.0_rc9-r3 (25 Jun 2012)
