@@ -1,16 +1,16 @@
-AUX bash-completion 6203 RMD160 3103cb50030ae3f3674608e516bab2dc9eda1184 SHA1 1ceb2c164e3f168a9e80c8dc4c396b8233e76fec SHA256 15e742477fad0104871fc055b6ce9bf803540070e47fa515ea7ca3c1a401f831
-AUX linuxrc 225 RMD160 5d5471867fe8b6b93ae6391c04f23ed27dcfccbf SHA1 6e68b01e66543ad7e1f182596de6fc0aeeab2744 SHA256 69c5f407ae20a5e3000dc6389f8c75ee97e11c353489a00cb619134b103bf538
-AUX zfs-0.6.0_rc9-bsd-init.patch 1747 RMD160 bfb75491141e97d94251fe8019dee389be04e6a4 SHA1 087e3960c07254cdd77f4c7241c9cb8bab8aa9d8 SHA256 c90e922bb1ccdd074b68ac1430c72551c230a3a8fba9ec6f3770127ece2a181f
-AUX zfs-0.6.0_rc9-fix-32-bit-warnings.patch 1437 RMD160 b3b6edc86bb275380bdfc6a719c82bf159abdfa5 SHA1 2728377900f02f36fc17bb574f4ab867490f8316 SHA256 4c20e471fa9431d38af870b0f39dd17e46d90ac246f33e7bfa88218c59cbb461
-AUX zfs-0.6.0_rc9-hardened-3.3-and-later-support.patch 1393 RMD160 cd00c8401b5b469a167f57653d1b5e57c549da39 SHA1 e35126542d23522751d4f66080ffda900cd07f88 SHA256 1922751b9505c4963f3b06dc3e735d727a08fb53dba23c2527f7a3ea81d1c7d9
-AUX zfs-0.6.0_rc9-hardened-support.patch 10487 RMD160 7691c3acacc7300a807ce34748d54b5c701d2d1f SHA1 fdfb1daa4358dabd2d470e3b2a40587574ac4a48 SHA256 5a2d1aa5c7b14446e889041ce50b9dbd74c0626f257cb14514230ab9618d48d9
-AUX zfs-0.6.0_rc9-linux-3.5-support.patch 5427 RMD160 6cbea4d4d4f64d96f2527d0896ff783b5dd3281a SHA1 58d06853a644bb0876e1a710a16bb1c16eba7c0f SHA256 78dcd8c6e3913299c8cb761301d90dbbf45cefd5cdb2dfce5bd46d02a37ac307
-AUX zfs-0.6.0_rc9-remove-pfmalloc-1-of-3.patch 1438 RMD160 750c62bac1206044a3819764409887204c70990f SHA1 f6e7d252507e76c36083b4a504d74dbff1a4fd12 SHA256 d1f1b3f47e0ada27e43ac04576eb61a96b5abe3bc6a7bd7869fe72e1e08bb4df
-AUX zfs-0.6.0_rc9-remove-pfmalloc-2-of-3.patch 1979 RMD160 1e988b54a351adc3bb8a7e077fdb0aaedc0882cc SHA1 7ea80b6dd01459cbf46c65daf41f79a128e7a46b SHA256 6f61761703c4c71d8c91fb6e49b927069301698d78fea35c2bcdc603bfdce59d
-AUX zfs-0.6.0_rc9-remove-pfmalloc-3-of-3.patch 2593 RMD160 39225be53d081aad20ae99f2e293f79e822076db SHA1 ec6a2a627fcecc4445be78c689155402c8ddd424 SHA256 a51425a9d97dc7177be6bf05a14d1905d52be5b503ab27e570e1e7e254befcf8
-AUX zfs-shutdown 1252 RMD160 449ba23e29486255bd04d54dfe11b77d414ba6d4 SHA1 108d271dfbe86df47f50a3219c5cf839efe4ce92 SHA256 cba63ddf086044c7e041c296ea86f68a1579ac830b8bea56b9f74b4204f96553
+AUX bash-completion 6203 SHA256 15e742477fad0104871fc055b6ce9bf803540070e47fa515ea7ca3c1a401f831 SHA512 e7ccb7179c4c455c496daab192099d7553674b9505801e25a2ea8c67a1b4de15d68ac99b2c3347c1f3454f88ede7694f08da61c5d061f0577bb1594ca4a90f12 WHIRLPOOL 79dfdc9c80a707f6bb39bea51ec451c16b821886ce3e84c73a249313d991cf8019f0647b0fe439754fc1ad08cb294bf4c245955fdc4af30286a8afd61dba21ba
+AUX linuxrc 225 SHA256 69c5f407ae20a5e3000dc6389f8c75ee97e11c353489a00cb619134b103bf538 SHA512 b8f311a9ac9008d4f3b30bb2b7ac0144aec6029245ddb50a32fe0b485c9df96db23569d30de502d31d944588513107e6144b535249b704b90b586a2593dd5200 WHIRLPOOL 9de672c9b2a44fa5daab5c48d988465797a1b6fdb5431366969a0172e733b4933bac6ca256977331862e9410c474431b26cf50658fbac1d9b3282e65bf3f83e2
+AUX zfs-0.6.0_rc9-bsd-init.patch 1747 SHA256 c90e922bb1ccdd074b68ac1430c72551c230a3a8fba9ec6f3770127ece2a181f SHA512 43b7820873c33579659319639047a3a49119eae221393af698d3ef9e8326bc31eb939ccc6fdf735cd7a84b5fc5a99b9f62933499a54abe9611e88a824db79fd5 WHIRLPOOL 28a1ed8d1f3812b04b890fbba5b09abde3f159c986622cab2c822b822f6d4ad246a7a9d1e939bc849c6ba5a02dc9e95d01cec18f3642731b6e3217a76f1f6769
+AUX zfs-0.6.0_rc9-fix-32-bit-warnings.patch 1437 SHA256 4c20e471fa9431d38af870b0f39dd17e46d90ac246f33e7bfa88218c59cbb461 SHA512 337387af403332884aa5ad81ed3966cd30b6595b8633a8971c1ba778d9c0889861b25e154710770a3cf19064e2495fe2c36f71d05f391b0229d52fd3f4bdb0ec WHIRLPOOL 786c7d2027635d0fd53f61b9fc385747d2afab492d820cd603c7e25a8e297f004d1a2c3692180373f5738e27f5e17c5194bf27906b726ee1bb998f89e7e5a956
+AUX zfs-0.6.0_rc9-hardened-3.3-and-later-support.patch 1393 SHA256 1922751b9505c4963f3b06dc3e735d727a08fb53dba23c2527f7a3ea81d1c7d9 SHA512 d9c622fe260af1635cb36aacb714dcfe44d48876e15ecd980972e4acf09d41bccf7ab713cccb247bd1081827ad98b459db85885931e2326ace7f5a80d646beea WHIRLPOOL 4062abfe858248ed220cdc596422088b2231fbb9d5524a94a424df955ad94a77f04e9869bedbb896ac7e9295053b2df5f7eff8679243c669211203008bde64f5
+AUX zfs-0.6.0_rc9-hardened-support.patch 10487 SHA256 5a2d1aa5c7b14446e889041ce50b9dbd74c0626f257cb14514230ab9618d48d9 SHA512 26e03f5a7453145b82336caaf2be7b8a0dea94aa0d43d88be65bfc1911c9ba556d3b22f78a435d381292eed2927131e48a7f93dd4db463f2bf17f2650cf02c0f WHIRLPOOL 9d003c4a61b4a52cd51950494a04b852178d95fdc6102c7eaf91b11c6de0aa531a7d6e8b6168a5d1af7bb1a78255c55ddb7282e8809293e2635b4b42d805e791
+AUX zfs-0.6.0_rc9-linux-3.5-support.patch 5427 SHA256 78dcd8c6e3913299c8cb761301d90dbbf45cefd5cdb2dfce5bd46d02a37ac307 SHA512 f8b482f0642aedcd66a587347dee423f62ef109a56aa7a959f5bdd841645796538b038e74a59f90a5b0140c7e5c625adc63b38c411cc52da3c92bdfea76f0950 WHIRLPOOL 1768144c6962a83e808a7f941923061bbba8dc74cc39bf17aa2ea62aed3f28b051a30a352c84bd8885010632abd467475c5f004ceb526d989a64937f82847a9b
+AUX zfs-0.6.0_rc9-remove-pfmalloc-1-of-3.patch 1438 SHA256 d1f1b3f47e0ada27e43ac04576eb61a96b5abe3bc6a7bd7869fe72e1e08bb4df SHA512 f133fed7acea871bec4e08b9e24b358111877f8c8a481746639913ab162a3a85216ceb848f9461aa57ebaa1d90a61b7e5105938511f6a98dfd6c281592c5ab09 WHIRLPOOL c49ea43a12a8c9e4dca30df0dbbeba6f4fd07cf7c0271aa9c45d9bf3c5e8eef93efe9da600ec1b1c9bc782d55382674db68f07afd3f7c1083e0e1b85816d9416
+AUX zfs-0.6.0_rc9-remove-pfmalloc-2-of-3.patch 1979 SHA256 6f61761703c4c71d8c91fb6e49b927069301698d78fea35c2bcdc603bfdce59d SHA512 dd4bfdd218791c6eef6120d95049860ba304ac474872357f3a5ff5b3783421a39035c732cd508f990145ff371bb8fcca2757152d41d963bcd559fa8f69fdedbe WHIRLPOOL 9bbd6479c22c905615ba6b4188aa332a9ec2685536cd6f784da28c081fdde430df15cb902b2ec1f7f9cdbfdcb20aabbc49460f5de09656686193001338c05a7a
+AUX zfs-0.6.0_rc9-remove-pfmalloc-3-of-3.patch 2593 SHA256 a51425a9d97dc7177be6bf05a14d1905d52be5b503ab27e570e1e7e254befcf8 SHA512 7579231f68a1d840a1d568b12bb5bc8bd78d15c379020618b061015cc4771655650157e993ee77731f9bdc6e7ee1a6dd3ead3f548724e72e398b0400a9eeb5e4 WHIRLPOOL 57787a873e5c0195060a3e146c34f465df3c8fcb8123263435fcc9180bebef19fbba911767f8e5131063c0e1199db34c40c062038bb1d9bed311a4d8ac2e85ce
+AUX zfs-shutdown 1252 SHA256 cba63ddf086044c7e041c296ea86f68a1579ac830b8bea56b9f74b4204f96553 SHA512 1c04ba8c1f533efdc2ea938ba508d1789fc6bb653e5ad84dfcd78e41f1271f05309df670b9b8246c3317c96060028266230c83b8c21b7abf71442320cd33a219 WHIRLPOOL 58a3e23d316f673bee78e9837c6aea3be6bfceab5e89a0717b0290257a7a682bef67e6ae98e6f92a0c41a1da043a6ba6eded5974bbff3ee50c39e48ea8d3c77f
 DIST zfs-0.6.0-rc9.tar.gz 1989469 RMD160 fef1e4e4f0d122be60e3f5b8322e683b8981bac2 SHA1 fc14d86cd0124fd67d2ac80853f9ae078dee9a0d SHA256 a014475fab410caf209e99b448aeffe0070d1d9fc002fb33dd56f73dba87b1fd
-EBUILD zfs-0.6.0_rc9-r6.ebuild 3631 RMD160 4536e297ae79d16074000f7a7a01b9e94346c7fb SHA1 1c081a23e29d590b8a07c27f81a5529bf55be8de SHA256 97053a7b06ac36dc1b9022c228150892e3a29f99d95480a024af9d4f1b97bb0f
-EBUILD zfs-9999.ebuild 3624 RMD160 2e078c6d51c1fe48fe235abab46f7a0fc800d980 SHA1 4049c3484cd3b84b27fe298972a113e85483233b SHA256 ad79995bc2dd5d1d01ef329e7572793872704b1b503311c0286d21743b6aef33
-MISC ChangeLog 6981 RMD160 ae1b0666fac5d29740077a768a7c915412abde66 SHA1 0bdfe67a50aa98a504054ff28d79af5c5815190f SHA256 a0244760121b15d62c2234195a2b20f8a3020bea9608bb72258673f69371dd08
-MISC metadata.xml 460 RMD160 49a38cd6f7fb8464c06282672932cb5930e024b2 SHA1 2cb49a2c9bd0c05ee136ead608d7ae9a50663384 SHA256 4f32c18bfc4d75883f198b1166ad4f5d7a95deb11eca99d476f305ed31875e7d
+EBUILD zfs-0.6.0_rc9-r6.ebuild 3610 SHA256 b4c6fb5a0a420c5b93e03d7a501e4cb6872de7d573dc936f6bf3792b1542228c SHA512 bd40335f0b144521ed42eb4186c0ff17a59186baae4bce938157c4bfa4b9ac5760fa89c01d655b4c0b53484b7d50da811b3e77c75f0836ef25cabe351101ff14 WHIRLPOOL 634ba4e9c3e1e89b422a6944b2b86806b187dc1695c39029baebc747b77065af318fe9fcba94e292f8ef72a3fc6ded1cdc4d107f26333ddb2652bdefa89c020a
+EBUILD zfs-9999.ebuild 3603 SHA256 226dd174b57fc3d7548cddf6ab5ca33d9ec8ebb6760f09f2819297e791e43914 SHA512 ded5ec962933404102df3155e821db20bfbdd344d16efed3b96d8daf9ee3ba7c48146194724a4643eb3f4f21a0401bf7154aaffc222be9c398ad44a941bb7b93 WHIRLPOOL c7b0fb66e74dc33f34f1a1de8bdc58848ed9fd7f7ac47bb2e63bac66ba4fc39623c28201aaf91b868a50be3e7d42443206af886f8384955a53a0f077f370eb4a
+MISC ChangeLog 7117 SHA256 5180be9659f73774086157337d4ba20714dd1f42302e0892bf80c52e8ba0ae6f SHA512 257d0052481548a21ceb0a24b84165e02389b96e60b6e066a06b26a4d4005e34e8fc733e5750aa8430e0ba9d3aa21ed6569a8c223d8cac3d87c0b0802189d96b WHIRLPOOL 078e5bc4ed80e577549a84cc709300c31df6be21bcfcb0d69f3ad0d0c9761a60963a1d70217d47237e8eeb5f013a7bac03f86a38c96e54862a421174358d9389
+MISC metadata.xml 460 SHA256 4f32c18bfc4d75883f198b1166ad4f5d7a95deb11eca99d476f305ed31875e7d SHA512 80e3d510553f1ab052ecea017e51d6ec2878e75b180ba8b72593ce775e423e5eb71806516b655d9714b8dadb4921888bc8874bb1ee19757efd63dc9f40a703c0 WHIRLPOOL e4dabc36cf1cb920f010493c0ba1854e884b3180ec286c51ac5ec1ce4edd32705657d3b0e9e45419a89156c7f08927acb1ab94b938955981aa1fb8d1a391d4ac
